samples/_failures_safe/1761376130_844d57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52ed0f4b.c: In function ‘main’:
./samples/SAFE/__tmp_52ed0f4b.c:168:12: error: expected declaration or statement at end of input
  168 |     struct Token token;
      |            ^~~~~
